renvoi après correction z-index loader + liens vide

--- a/sass/animations.scss
+++ b/sass/animations.scss
@@ -5,6 +5,7 @@
 
   100% {
     opacity: 0;
+    z-index: -100;
   }
 }
 
